Fix some overlaps. Navtop: 17px height; Pages: 20px height. The form already has 12px bottom margin, so only 8px bottom padding.

--- a/appchan.css
+++ b/appchan.css
@@ -191,7 +191,7 @@ This style is designed for the following browsers, ordered alphabetically:
 	}
 
 	form[name="delform"] {
-		padding: 14px 254px 0 0 !important;
+		padding: 17px 254px 8px 0 !important;
 	}
 
 	body>span>div {
